feat: implement `GET /libraries/{id}/media`
